tests/paczka1/small_fuzzy/92184748.err
Error in line 2: 60R8KV2t A772 84,9
Error in line 11: 60R8KV2t A976 27,0
Error in line 15: MgCa A493 39,3
